fix ie legend being a no-wrap block
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@18814 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_store.scss
+++ b/src/main/resources/scss/_store.scss
@@ -736,6 +736,7 @@
 	}
 
 	legend {
+		display: inline-block;
 		color: $secondary-grey;
 		font: normal 700 14px/20px $font;
 
